--- a/Aula 7/index.html
+++ b/Aula 7/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Jane Doe</title>
-    <link rel="stylesheet" href="../Aula 7/style.css">
+   <link rel="stylesheet" href="./style.css">
   </head>
 
   <body>
