definindo margin-bottom corretamente da section

--- a/Atividade 11/index.html
+++ b/Atividade 11/index.html
@@ -26,12 +26,13 @@
         </div>
       </nav>
     </header>
+
     <main>
       <section>
         <div class="card">
           <h2 class="title1">Envio grátis comprando 2 pizzas</h2>
           <img src="./img/delivery.jpg" class="img-pizza" />
-          <h2 class="title2">Cardápio de pizzas</h2>
+        <div><h2 class="title2">Cardápio de pizzas</h2></div>  
         </div>
 
         <div class="firstpizza">
@@ -51,6 +52,7 @@
         </div>
       </section>
     </main>
+
     <footer>
       <nav class="nav3">
         <a href="">Home</a>
