Corringdo bugs do css

--- a/Atividade 10/index.html
+++ b/Atividade 10/index.html
@@ -17,7 +17,7 @@
       <div class="card">
         <div class="bg batman">
           <img src="./img.png/Imagem batman.png" class="hero-img" alt="batman-avatar"/>
-          <img src="" class="icon-heart" alt="icon-heart"/>
+          <img src="" class="icon-heart">
         </div>
         <div class="text-card">
           <h2>Batman</h2>
@@ -33,7 +33,7 @@
       <div class="card">
         <div class="bg arlequina">
           <img src="./img.png/imagem alerquina.png" class="hero-img"alt="avatar-arlequina" />
-          <img src="" class="icon-heart" alt="icon-heart" />
+          <img src="" class="icon-heart" />
         </div>
         <div class="text-card">
           <h2>Arlequina</h2>
