--- a/Atividade 12/index.html
+++ b/Atividade 12/index.html
@@ -8,10 +8,11 @@
     <title>FrontCat&Dog</title>
   </head>
   <body>
-    <header>
-      <div class="top">
-        <p>Grandes ofertas em comedouros</p>
 
+
+    <header class="header">
+      <p>Grandes ofertas em comedouros</p>
+      <div class="top">
         <select class="selectlanguage" name="Idioma">
           <option value="valor1">Português</option>
           <option value="valor2" selected>Espanhol</option>
@@ -27,28 +28,52 @@
         </select>
       </div>
     </header>
-    <header>
-       <div class="Menu">
-         <span>
-           <img src="./img/Vector (1).png" src="./img/Vector (2).png" src="./img/Vector (3).png" src="./img/Vector.png" src="./img/Vector (4).png"/>
-           <a href="">Categorías</a>
-         </span>
 
-         <span>
-           <img src="./img/Vector (1).png" src="./img/Vector (2).png" src="./img/Vector (3).png" src="./img/Vector.png" src="./img/Vector (4).png" />
-           <a href="">Pets</a>
-         </span>
 
-         <span>
-           <img src="./img/Vector (1).png" src="./img/Vector (2).png" src="./img/Vector (3).png" src="./img/Vector.png" src="./img/Vector (4).png" />
-           <a href="">Quem somos</a>
-         </span>
-         
-         <span>
-           <img src="./img/Vector (1).png" src="./img/Vector (2).png" src="./img/Vector (3).png" src="./img/Vector.png" src="./img/Vector (4).png" />
-           <a href="">Contato</a>
-         </span>
-        </div>
+    <section class="section">
+      <div class="menu">
+
+          <img class="icon"/>         
+          <a href="">Categorías</a>
+
+          <img class="icon"/>
+          <a href="">Pets</a>
+
+          <img class="icon"/>
+          <a href="">Quem somos</a>
+
+          <img class="icon"/>
+          <a href="">Contato</a>
+       
+      </div>
+      <div class="front">
+        <img src="./img/cat-solid.svg" width="20px" height="20px" alt="">
+        <p>Front</p>
+        <p class="cat&dog">Cat&Dog</p>
+        <img src="./img/dog-solid.svg" width="20px" height="20px" alt="">
+      </div>
+    </section>
+
+    <section class="banner">
+        <img src="" alt="" />
+        <div>
+          <div>
+            <h2>É um prazer te ter aqui!</h2>
+            <p>Comedouros com desconto!</p>
+            <button>COMEDOUROS</button>
+          </div>
+      </section>
+      <section>
+            <div>
+              <h1></h1>
+              <ul>
+                <li>Comedouros</li>
+                <li>Acessórios</li>
+                <li>Comida</li>
+              </ul>
+            </div>
+      </section>
+    </nav>
     </header>
   </body>
 </html>
